# PokeShop

./: .gitignore  README.md
backend/: .env.example  README.md  main.py  pyproject.toml
backend/scripts/: lint.bat  lint.sh
backend/src/shared/domain/: events.py  value_objects.py
backend/src/shared/infrastructure/: config.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: BaseFooter.vue  BaseHeader.vue
frontend/src/pokemon/domain/: pokemon-repository.ts  pokemon.ts
frontend/src/router/: index.ts
frontend/src/shared/domain/: value-objects.ts
frontend/src/shared/infrastructure/: http-client.ts
frontend/src/views/: CartView.vue  CatalogView.vue  CheckoutView.vue  LoginView.vue  PokemonDetailView.vue  ProfileView.vue  RegisterView.vue
